--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <li>Portada institucional, resumen, palabras clave y referencias.</li>
                 <li>Metadatos: título, autor(es), carrera, facultad, año, tutor/a y tipo de trabajo.</li>
               </ul>
-              <p>Envía tu propuesta a <strong>repositorioudeomazate@gmail.com</strong>.</p>
+              <p>Envía tu propuesta a <strong>estudiantesoporteudeo@gmail.com</strong>.</p>
             </div>
           </div>
         </div>
@@ -295,3 +295,4 @@
   <script src="js/contenido-inicio.js"></script>
 </body>
 </html>
+
