--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="prose">
               <ol>
                 <li>Prepara tu PDF conforme a los requisitos.</li>
-                <li>Envía el archivo y metadatos a <strong>repositorio@udeo.edu.gt</strong>.</li>
+                <li>Envía el archivo y metadatos a <strong>estudiantesoporteudeo@gmail.com</strong>.</li>
                 <li>Revisión de formato y metadatos en 24–48 h.</li>
                 <li>Publicación en la facultad correspondiente.</li>
               </ol>
@@ -249,7 +249,7 @@
               <ul>
                 <li>Archivo en PDF (máx. 50 MB).</li>
                 <li>Portada institucional, resumen, palabras clave y referencias.</li>
-                <li>Metadatos: título, autor(es), carrera, facultad, año, tutor/a y tipo de trabajo.</li>
+                <li>Metadatos: título, autor(es), carrera, facultad, año, y tipo de trabajo.</li>
               </ul>
               <p>Envía tu propuesta a <strong>estudiantesoporteudeo@gmail.com</strong>.</p>
             </div>
@@ -295,4 +295,3 @@
   <script src="js/contenido-inicio.js"></script>
 </body>
 </html>
-
